Removed templates, shifted them as inline in the index file.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </head>
     <body>
         <!-- Dust.js templates -->
-        <script id="list-item-template" type="text/x-dust-template">
+        <script id="list-item-template" class="dust-template" type="text/x-dust-template">
         <div class="list-item">
             <div class="left-section">
                 <div class="main-image"></div>
@@ -67,12 +67,12 @@
         </div>
         </script>
 
-        <script id="friends" type="text/x-dust-template">
+        <script id="friends" class="dust-template" type="text/x-dust-template">
         {#friends}
         <div></div>{~n}
         </script>
 
-        <script id="list-item-template" type="text/x-dust-template">
+        <script id="list-item-template" class="dust-template" type="text/x-dust-template">
         <div class="list-item">
             <div class="left-section">
                 <div class="main-image"></div>
@@ -85,7 +85,7 @@
         </div>
         </script>
 
-        <script id="list-item-template" type="text/x-dust-template">
+        <script id="list-item-template" class="dust-template" type="text/x-dust-template">
         <div class="list-item">
             <div class="left-section">
                 <div class="main-image"></div>
