--- a/index.html
+++ b/index.html
@@ -2,27 +2,31 @@
     <head>
         <title>Realizr</title>
 
+        <!-- tr '\n' '' < from > to -->
+
         <!-- jQuery adn plugins -->
         <script src="scripts/lib/jquery.js"></script>
-        <script src="scripts/lib/serializeobject.js"></script>
+        <!--script src="scripts/lib/serializeobject.js"></script>
         <script src="scripts/lib/charcount.js"></script>
         <script src="scripts/lib/jquery.countdown.js"></script>
-        <script src="scripts/lib/jquery.prettydate.js"></script>
+        <script src="scripts/lib/jquery.prettydate.js"></script-->
 
         <!-- Core JS MVC -->
         <script src="node_modules/dustjs-linkedin/dist/dust-core-1.0.0.js"></script>
         <script src="node_modules/underscore/underscore.js"></script>
         <script src="node_modules/backbone/backbone.js"></script>
+        <script src="node_modules/backbone/examples/backbone-localstorage.js"></script>
 
         <!-- Router, views, models and collections -->
+        <script src="scripts/app.js" type="text/javascript"></script>
         <script src="scripts/router.js" type="text/javascript"></script>
 
-        <script src="scripts/models/list-item.js" type="text/javascript"></script>
+        <script src="scripts/models/dream.js" type="text/javascript"></script>
         <script src="scripts/models/product.js" type="text/javascript"></script>
         <script src="scripts/models/user.js" type="text/javascript"></script>
         <script src="scripts/models/comment.js" type="text/javascript"></script>
 
-        <script src="scripts/collections/list-items.js" type="text/javascript"></script>
+        <script src="scripts/collections/dreams.js" type="text/javascript"></script>
         <script src="scripts/collections/products.js" type="text/javascript"></script>
         <script src="scripts/collections/users.js" type="text/javascript"></script>
         <script src="scripts/collections/comments.js" type="text/javascript"></script>
@@ -42,14 +46,23 @@
 
             // Set up the router
             window.router = new Router();
+            window.users = new UsersCollection();
+            window.products = new ProductsCollection();
+            window.dreams = new DreamsCollection();
+
+            users.fetch();
+            products.fetch();
+            dreams.fetch();
 
             // Set up application
-            window.app = new AppView({
-                model: new ProjectModel(),
-                id: 'group-gift'
-            });
-            app.render();
-            Backbone.history.start();
+            users.fetch({success: function () {
+                console.log(users.length);
+                window.app = new AppView({
+                    model: window.users.at(0)
+                });
+                app.render();
+                Backbone.history.start();
+            }});
         });
         </script>
     </head>
