Changes to templates

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="list-item">
             <div class="left-section">
                 <div class="main-image"></div>
-                <div class="title">{title}</div>
+                <h1 class="title">{title}</h1>
             </div>
             <div class="right-section">
                 <div class="products">
@@ -100,6 +100,11 @@
                 </div>
                 <div class="timer">{}</div>
             </div>
+        </div>
+        </script>
+
+        <script id="add-item-template" class="dust-template" type="text/x-dust-template">
+        <div class="add-item">
         </div>
         </script>
 
