--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
         <div class="list-item">
             <div class="left-section">
                 <div class="main-image">
-                  <img src="http://placehold.it/210x290">
+                  <img src="http://placehold.it/210x210">
                 </div>
                 <h1 class="title">{title}</h1>
             </div>
@@ -29,7 +29,7 @@
         <div class="list-item">
             <div class="left-section">
                 <div class="main-image">
-                  <img src="http://placehold.it/210x290">
+                  <img src="http://placehold.it/210x210">
                 </div>
                 <h1 class="title">{title}</h1>
             </div>
@@ -44,7 +44,7 @@
         <div class="list-item">
             <div class="left-section">
                 <div class="main-image">
-                  <img src="http://placehold.it/210x290">
+                  <img src="http://placehold.it/210x210">
                 </div>
                 <h1 class="title">{title}</h1>
             </div>
@@ -59,7 +59,7 @@
         <div class="list-item">
             <div class="left-section">
                 <div class="main-image">
-                  <img src="http://placehold.it/210x290">
+                  <img src="http://placehold.it/210x210">
                 </div>
                 <h1 class="title">{title}</h1>
             </div>
@@ -74,7 +74,7 @@
         <div class="list-item">
             <div class="left-section">
                 <div class="main-image">
-                  <img src="http://placehold.it/210x290">
+                  <img src="http://placehold.it/210x210">
                 </div>
                 <h1 class="title">{title}</h1>
             </div>
@@ -89,7 +89,7 @@
         <div class="list-item active">
             <div class="left-section">
                 <div class="main-image">
-                  <img src="http://placehold.it/210x290">
+                  <img src="http://placehold.it/210x210">
                 </div>
                 <h1 class="title">{title}</h1>
             </div>
@@ -114,7 +114,7 @@
         <div class="list-item">
             <div class="left-section">
                 <div class="main-image">
-                  <img src="http://placehold.it/210x290">
+                  <img src="http://placehold.it/210x210">
                 </div>
                 <h1 class="title">{title}</h1>
             </div>
@@ -129,7 +129,7 @@
         <div class="list-item">
             <div class="left-section">
                 <div class="main-image">
-                  <img src="http://placehold.it/210x290">
+                  <img src="http://placehold.it/210x210">
                 </div>
                 <h1 class="title">{title}</h1>
             </div>
@@ -144,7 +144,7 @@
         <div class="list-item">
             <div class="left-section">
                 <div class="main-image">
-                  <img src="http://placehold.it/210x290">
+                  <img src="http://placehold.it/210x210">
                 </div>
                 <h1 class="title">{title}</h1>
             </div>
@@ -158,6 +158,14 @@
 
       </div>
       </div>
+      </div>
+      <div class="container">
+        <div class="list-item add-item">
+            <div class="main-image">
+                <img src="http://placehold.it/210x210">
+            </div>
+            <h1 class="title">Add goal</a>
+        </div>
       </div>
     </div>
 
