--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <script src="scripts/app.js" type="text/javascript"></script>
         <script src="scripts/router.js" type="text/javascript"></script>
 
+        <script src="scripts/models/base.js" type="text/javascript"></script>
         <script src="scripts/models/dream.js" type="text/javascript"></script>
         <script src="scripts/models/product.js" type="text/javascript"></script>
         <script src="scripts/models/user.js" type="text/javascript"></script>
@@ -88,7 +89,7 @@
         </script>
 
         <script id="list-item-template" class="dust-template" type="text/x-dust-template">
-        <div class="list-item">
+        <div class="list-item dream-item">
             <div class="left-section">
                 <div class="main-image"></div>
                 <h1 class="title">{title}</h1>
@@ -109,7 +110,13 @@
         </script>
 
         <script id="add-item-template" class="dust-template" type="text/x-dust-template">
-        <div class="add-item">
+        <div class="list-item add-item">
+            <div class="left-section">
+                <div class="main-image">
+                    <img src="http://placehold.it/210x210">
+                </div>
+                <h1 class="title">Add dream</h1>
+            </div>
         </div>
         </script>
 
