--- a/index2.html
+++ b/index2.html
@@ -11,33 +11,38 @@
 
 	<div role="main">
 	  <div class="container clearFix">
+
 		<div class="list-item dream-item">
-			<div class="left-section">
-				<div class="main-image">
-				  <img src="http://placehold.it/210x210">
+			<div class="dream">
+				<div class="left-section">
+					<div class="main-image">
+					  <img src="http://placehold.it/210x210">
+					</div>
+					<h1 class="title">{title}</h1>
 				</div>
-				<h1 class="title">{title}</h1>
-			</div>
-			<div class="right-section">
-				<div class="products">
-					<div class="friend"></div>
+				<div class="right-section">
+					<div class="products">
+						<div class="friend"></div>
+					</div>
+					<div class="timer">{}</div>
 				</div>
-				<div class="timer">{}</div>
 			</div>
 		</div>
 
 		<div class="list-item dream-item">
-			<div class="left-section">
-				<div class="main-image">
-				  <img src="http://placehold.it/210x210">
+			<div class="dream">
+				<div class="left-section">
+					<div class="main-image">
+					  <img src="http://placehold.it/210x210">
+					</div>
+					<h1 class="title">{title}</h1>
 				</div>
-				<h1 class="title">{title}</h1>
-			</div>
-			<div class="right-section">
-				<div class="products">
-					<div class="friend"></div>
+				<div class="right-section">
+					<div class="products">
+						<div class="friend"></div>
+					</div>
+					<div class="timer">{}</div>
 				</div>
-				<div class="timer">{}</div>
 			</div>
 		</div>
 
@@ -172,6 +177,7 @@
 	</div>
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+	<script src="scripts/lib/jquery.ui.js"></script>
 	<script src="scripts/main.js"></script>
 
   </body>
