Prep for final mrege with Anton

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <script src="scripts/collections/friends.js" type="text/javascript"></script>
 
         <script src="scripts/views/app.js" type="text/javascript"></script>
-        <script src="scripts/views/list-item.js" type="text/javascript"></script>
+        <script src="scripts/views/dreams.js" type="text/javascript"></script>
         <script src="scripts/views/profile.js" type="text/javascript"></script>
 
         <script type="text/javascript">
@@ -50,7 +50,7 @@
             window.users = new UsersCollection();
             window.products = new ProductsCollection();
             window.dreams = new DreamsCollection();
-            window.comments = new CommmentsCollection();
+            window.comments = new CommentsCollection();
 
             users.fetch();
             products.fetch();
