--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <script src="node_modules/backbone/backbone.js"></script>
         <script src="node_modules/backbone/examples/backbone-localstorage.js"></script>
 
-        <!-- Router, views, models and collections -->
+        <!-- Router, \ views, models and collections -->
         <script src="scripts/app.js" type="text/javascript"></script>
         <script src="scripts/router.js" type="text/javascript"></script>
 
@@ -45,6 +45,9 @@
                 dust.loadSource(compiled);
             });
 
+            // Clear local storage to prep for new data
+            localStorage.clear();
+
             // Set up the router
             window.router = new Router();
             window.users = new UsersCollection();
@@ -52,9 +55,11 @@
             window.dreams = new DreamsCollection();
             window.comments = new CommentsCollection();
 
-            users.fetch();
-            products.fetch();
-            dreams.fetch();
+            initCollections();
+            saveModels(users);
+            saveModels(products);
+            saveModels(dreams);
+            saveModels(comments);
 
             // Set up application
             users.fetch({success: function () {
@@ -65,6 +70,163 @@
                 app.render();
                 Backbone.history.start();
             }});
+
+            // Save new models into localstorage
+            function saveModels(collection) {
+                collection.each(function (model) {
+                    model.save();
+                });
+            }
+
+            function initCollections() {
+                window.users.add(JSON.parse('[ \
+    { \
+        "name":"jo bloggs", \
+        "email":"jo.bloggs@test.com", \
+        "dreams": [1,3,4] \
+    }, \
+    { \
+        "name":"harry potter", \
+        "email":"harry.potter@test.com", \
+        "dreams": [2,5] \
+    }, \
+    { \
+        "name":"jane doe", \
+        "email":"jane.doe@test.com", \
+        "dreams": [] \
+    } \
+]'));
+                window.products.add(JSON.parse('[ \
+    { \
+        "name":"skydiving", \
+        "price":"500.10", \
+        "location":"Perth WA", \
+        "keywords":["skydive", "skydiving", "parachuting"], \
+        "supplier":"Perth Skydiving Co.", \
+        "availability":"all", \
+        "pictures":["skydiving.jpg"] \
+    }, \
+    { \
+        "name":"travel to England", \
+        "price":"5050.00", \
+        "location":"Perth WA", \
+        "keywords":["travel", "England", "London", "Stonehenge", "Castle", "Royalty", "Queen"], \
+        "supplier":"Qantas", \
+        "availability":"all", \
+        "pictures":["London.jpg"] \
+    }, \
+    { \
+        "name":"flute lessons", \
+        "price":"50.00", \
+        "location":"Perth WA", \
+        "keywords":["music", "flute"], \
+        "supplier":"Mrs Moonspasm", \
+        "availability":"Tuesday afternoons by appointment only", \
+        "pictures":["Flute.jpg"] \
+    } \
+]'));
+                window.dreams.add(JSON.parse('[ \
+    { \
+        "id":1, \
+        "objective":"skydive", \
+        "due":1355241600000, \
+        "privacy":"public", \
+        "users":"jo bloggs", \
+        "comments":[1, 2], \
+        "keywords":["skydive"], \
+        "picture":"skydive.jpg", \
+        "ranking":"1" \
+    }, \
+    { \
+        "id":2, \
+        "objective":"diving", \
+        "due":1363708800000, \
+        "privacy":"public", \
+        "users":"jo bloggs", \
+        "comments":[3, 4, 5], \
+        "keywords":["music", "flute"], \
+        "picture":"flute.jpg", \
+        "ranking":"2" \
+    }, \
+    { \
+        "id":3, \
+        "objective":"grow a beard", \
+        "due":1377964800000, \
+        "privacy":"private", \
+        "users":"jo bloggs", \
+        "comments":[], \
+        "keywords":["beard"], \
+        "picture":"beard.jpg", \
+        "ranking":"3" \
+    }, \
+    { \
+        "id":4, \
+        "objective":"visit stonehenge", \
+        "due":1364745600000, \
+        "privacy":"public", \
+        "users":"jo bloggs", \
+        "comments":[6], \
+        "keywords":["travel", "stonehenge"], \
+        "picture":"stonehenge.jpg", \
+        "ranking":"4" \
+    }, \
+    { \
+        "id":5, \
+        "objective":"swim with whales", \
+        "due":1365091200000, \
+        "privacy":"private", \
+        "users":"jo bloggs", \
+        "comments":[], \
+        "keywords":["business"], \
+        "picture":"business.jpg", \
+        "ranking":"5" \
+    } \
+]'));
+                window.comments.add(JSON.parse('[ \
+    { \
+        "id":1, \
+        "author":"jo bloggs", \
+        "text":"yeah I know everyone wants to do this, but so do I", \
+        "date":1347379200000, \
+        "dream":1 \
+    }, \
+    { \
+        "id":2, \
+        "author":"harry potter", \
+        "text":"not me. Leaping out of a perfectly good airplane seems a little stupid", \
+        "date":1347379200000, \
+        "dream":2 \
+    }, \
+    { \
+        "id":3, \
+        "author":"jo bloggs", \
+        "text":"the fiddle is the traditional aspiration, but I like the sound of a flute", \
+        "date":1347379200000, \
+        "dream":2 \
+    }, \
+    { \
+        "id":4, \
+        "author":"harry potter", \
+        "text":"easier to learn and harder to master, I think", \
+        "date":1347379200000, \
+        "dream":2 \
+    }, \
+    { \
+        "id":5, \
+        "author":"jo bloggs", \
+        "text":"what you know about the flute is remarkable in its paucity and irrelevance", \
+        "date":1347379200000, \
+        "dream":2 \
+    }, \
+    { \
+        "id":6, \
+        "author":"jane doe", \
+        "text":"went there last year. Not as awesome as youd imagine", \
+        "date":1347379200000, \
+        "dream":4 \
+    } \
+]'));
+            }
         });
         </script>
     </head>
