--- a/index2.html
+++ b/index2.html
@@ -24,7 +24,7 @@
 					<div class="products">
 						<div class="friend"></div>
 					</div>
-					<div class="timer">{}</div>
+					<div class="timer">{due}</div>
 				</div>
 			</div>
 		</div>
