--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Realizr</title>
 
         <!-- tr '\n' '' < from > to -->
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
+        <link rel="stylesheet" href="css/style.css">
 
         <!-- jQuery adn plugins -->
         <script src="scripts/lib/jquery.js"></script>
+        <script src="scripts/lib/moment.min.js"></script>
         <!--script src="scripts/lib/serializeobject.js"></script>
         <script src="scripts/lib/charcount.js"></script>
         <script src="scripts/lib/jquery.countdown.js"></script>
         <script src="scripts/lib/jquery.prettydate.js"></script-->
 
         <!-- Core JS MVC -->
-        <script src="node_modules/dustjs-linkedin/dist/dust-core-1.0.0.js"></script>
-        <script src="node_modules/underscore/underscore.js"></script>
-        <script src="node_modules/backbone/backbone.js"></script>
-        <script src="node_modules/backbone/examples/backbone-localstorage.js"></script>
+        <script src="scripts/lib/dust-full-1.0.0.js"></script>
+        <script src="scripts/lib/underscore.js"></script>
+        <script src="scripts/lib/backbone.js"></script>
+        <script src="scripts/lib/backbone-localstorage.js"></script>
 
         <!-- Router, \ views, models and collections -->
         <script src="scripts/app.js" type="text/javascript"></script>
@@ -36,17 +41,19 @@
         <script src="scripts/views/app.js" type="text/javascript"></script>
         <script src="scripts/views/dreams.js" type="text/javascript"></script>
         <script src="scripts/views/profile.js" type="text/javascript"></script>
+        <script src="scripts/views/add.js" type="text/javascript"></script>
 
         <script type="text/javascript">
         jQuery(function ($) {
             // Compile the templates - accessible via 'id' attribute of script at bottom of index.html
-            $('.dust-templates').each(function () {
-                var compiled = dust.compile($(this).html, $(this).attr('id'));
+            $('.dust-template').each(function () {
+                var $this = $(this);
+                var compiled = dust.compile($this.html(), $this.attr('id'));
                 dust.loadSource(compiled);
             });
 
             // Clear local storage to prep for new data
-            localStorage.clear();
+            window.localStorage.clear();
 
             // Set up the router
             window.router = new Router();
@@ -79,11 +86,11 @@
             }
 
             function initCollections() {
-                window.users.add(JSON.parse('[ \
+                window.users.reset(JSON.parse('[ \
     { \
         "name":"jo bloggs", \
         "email":"jo.bloggs@test.com", \
-        "dreams": [1,3,4] \
+        "dreams": [1,3,4,5] \
     }, \
     { \
         "name":"harry potter", \
@@ -96,7 +103,7 @@
         "dreams": [] \
     } \
 ]'));
-                window.products.add(JSON.parse('[ \
+                window.products.reset(JSON.parse('[ \
     { \
         "name":"skydiving", \
         "price":"500.10", \
@@ -125,7 +132,7 @@
         "pictures":["Flute.jpg"] \
     } \
 ]'));
-                window.dreams.add(JSON.parse('[ \
+                window.dreams.reset(JSON.parse('[ \
     { \
         "id":1, \
         "objective":"skydive", \
@@ -182,7 +189,7 @@
         "ranking":"5" \
     } \
 ]'));
-                window.comments.add(JSON.parse('[ \
+                window.comments.reset(JSON.parse('[ \
     { \
         "id":1, \
         "author":"jo bloggs", \
@@ -231,12 +238,15 @@
         </script>
     </head>
     <body>
+        <header>
+            <div>
+                <h1>realizr - delivering your dreams</h1>
+            </div>
+        </header>
 
         <!-- Dust.js templates -->
         <script id="app-template" class="dust-template" type="text/x-dust-template">
-            <div id="dreams-todos" class="list"></div>
-            <div id="dreams-completes" class="list"></div>
-            <div id="profile"></div>
+            <div class="container clearFix"></div>
         </script>
 
         <script id="right-section-template" class="dust-template" type="text/x-dust-template">
@@ -251,18 +261,30 @@
         </script>
 
         <script id="list-item-template" class="dust-template" type="text/x-dust-template">
+        {#dreams}
         <div class="list-item dream-item">
             <div class="left-section">
-                <div class="main-image"></div>
-                <h1 class="title">{title}</h1>
+                <div class="main-image"><img src="img/{picture}"></div>
+                <h1 class="title">{objective}</h1>
             </div>
             <div class="right-section">
                 <div class="products">
-                    {#products}
+                    {#dream.products}
                     <div class="friend"></div>{~n}
-                    {/products}
+                    {/dream.products}
+                    <h2>Why?</h2>
+                    <p>I want to do this because...</p>
+                    <ul class="options">
+                        <li>Timeframe: <span class="time">{due}</span></li>
+                        <li class="complete">Complete</li>
+                    </ul>
+                    <h2>Comments</h2>
+                    <p>Mary</p>
+                    <p>You can do it!</p>
                 </div>
             </div>
+        </div>{~n}
+        {/dreams}
         </script>
 
         <script id="profile-template" class="dust-template" type="text/x-dust-template">
@@ -275,11 +297,19 @@
         <div class="list-item add-item">
             <div class="left-section">
                 <div class="main-image">
-                    <img src="http://placehold.it/210x210">
+                    <img src="img/dream.jpg">
                 </div>
-                <h1 class="title">Add dream</h1>
             </div>
         </div>
+        </script>
+
+        <script id="add-dream-template" class="dust-template" type="text/x-dust-template">
+            <h1>Add your dream</h1>
+            <form>
+                <label>What&rsquo;s your dream?</label>
+                <input type="text" class="input-large">
+                <span class="help-block">Example: naked skydiving</span>
+            </form>
         </script>
 
     </body>
